# dependabot-sandbox

.github/: dependabot.yml
nodejs/: package-lock.json  package.json
python/: pyproject.toml
