[tool.poetry]
name = "python"
version = "0.1.0"
description = ""
authors = ["Shinji Fujimoto <fujimoto.shinji@classmethod.jp>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
